--- a/.github/workflows/run-python.yml
+++ b/.github/workflows/run-python.yml
@@ -7,9 +7,17 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10"]
+    env:
+        sheet_name: ${{ secrets.SHEET_NAME }}
+        sheet_id: ${{ secrets.SHEET_ID }}
+        app_password: ${{ secrets.APP_PASSWORD }}
+        sender_email: ${{ secrets.SENDER_EMAIL }}
+        recipient_mail: ${{ secrets.RECIPIENT_MAIL }}
+
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
