--- a/.github/workflows/run-python.yml
+++ b/.github/workflows/run-python.yml
@@ -26,6 +26,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install pytest pandas openpyxl
+
       - name: Lint with Ruff
         run: |
           pip install ruff
@@ -37,8 +39,18 @@ jobs:
       - name: Generate Coverage Report
         run: |
           coverage report -m
-      - name: Run pytest
+      - name: Run Pytest
         run: |
-           pip install pytest
-           pytest --junit-xml=report.xml
+          pytest --junitxml=report.xml || true # Runs tests and generates report
+
+      - name: Convert XML to Excel
+        run: |
+          # Create a python script to parse report.xml and save to results.xlsx
+          python -c "import pandas as pd; import xml.etree.ElementTree as ET; ...your conversion logic here..."
+
+      - name: Upload Excel Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: pytest-results-excel
+          path: results.xlsx
           
