--- a/.github/workflows/run-python.yml
+++ b/.github/workflows/run-python.yml
@@ -22,11 +22,15 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install pytest pandas openpyxl
+
+      - name: Run report generation script
+        run: python generate_report.py
 
       - name: Lint with Ruff
         run: |
@@ -39,13 +43,13 @@ jobs:
       - name: Generate Coverage Report
         run: |
           coverage report -m
+
       - name: Run Pytest
         run: |
           pytest --junitxml=report.xml || true # Runs tests and generates report
 
-      - name: Upload Excel Report
+      - name: Upload Excel report as an artifact
         uses: actions/upload-artifact@v4
         with:
-          name: pytest-results-excel
-          path: results.xlsx
-          
+          name: ExcelReport
+          path: reports/MyReport.xlsx
