--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ urllib3==2.1.0               # via requests, selenium
 pytest-cov==4.0.0
 ruff==v0.0.260
 coverage-badge~=1.1.0
+pandas
+xlsxwriter
