--- a/.github/workflows/run-python.yml
+++ b/.github/workflows/run-python.yml
@@ -44,8 +44,9 @@ jobs:
         run: |
           coverage report -m
 
-      - name: Run report generation script
-        run: python generate_report.py
+      - name: Run generate_report.py
+        #working-directory: ./APITesting # Change this to the actual directory of your script
+        run: python $GITHUB_WORKSPACE/generate_report.py
 
 
       - name: Upload Excel report artifact
