--- a/.github/workflows/run-python.yml
+++ b/.github/workflows/run-python.yml
@@ -43,6 +43,11 @@ jobs:
       - name: Generate Coverage Report
         run: |
           coverage report -m
+      - name: Debug file location
+        run: |
+           pwd
+           ls -lh
+
 
       - name: Run generate_report.py
         #working-directory: ./APITesting # Change this to the actual directory of your script
