--- a/.github/workflows/run-python.yml
+++ b/.github/workflows/run-python.yml
@@ -16,8 +16,14 @@ jobs:
 
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      #- name: Checkout repository
+      #  uses: actions/checkout@v3
+
+      - uses: actions/checkout@v4
+      - name: Run Python script
+        run: python generate_report.py
+
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
@@ -47,9 +53,7 @@ jobs:
         run: |
            pwd
            ls -R
-      - name: Run report generation script
-        run: python TestCases/generate_script.py
-      # The script "Generated_Report.xlsx" is created here
+
 
       - name: Upload Excel report artifact
         uses: actions/upload-artifact@v4
