--- a/.github/workflows/run-python.yml
+++ b/.github/workflows/run-python.yml
@@ -16,12 +16,8 @@ jobs:
 
 
     steps:
-      #- name: Checkout repository
-      #  uses: actions/checkout@v3
-
-      - uses: actions/checkout@v4
-      - name: Run Python script
-        run: python generate_report.py
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
 
       - name: Set up Python ${{ matrix.python-version }}
