--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,8 @@ urllib3==2.1.0               # via requests, selenium
 pytest-cov==4.0.0
 ruff==v0.0.260
 coverage-badge~=1.1.0
-pandas
-xlsxwriter
+psycopg2==2.9.5
+pandas==1.4.3
+openpyxl==3.0.10
+numpy==1.22.3
+python-dotenv==0.20.0
