--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,6 @@ jobs:
     - name: Upload Excel report artifact
       uses: actions/upload-artifact@v4
       with:
-        name: Excel-Report
-        path: reports/automated_report.xlsx
+        name: Execution-Status-Report
+        path: Execution-Status-Report.xlsx
         retention-days: 7 # Optional: define how long to keep the artifact
