--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -1,33 +1,31 @@
-name: Run Tests and Generate Report
+name: Python application CI
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
-      # Replace with your actual test command.
-      # Ensure it produces JUnit XML output. The 'if: always()' ensures this step runs even if tests fail.
-      - name: Run tests (e.g., Maven, Node, etc.)
-        run: |
-          # Example for Node.js (replace with your language/framework's command)
-          npm install
-          npm test -- --reporter junit --reporter-options 'output=test-results.xml'
-        continue-on-error: true # Allow subsequent steps to run even on test failure
-
-      - name: Publish Test Results Summary
-        uses: dorny/test-reporter@v1
-        with:
-          name: Test Results
-          path: test-results.xml # Path to your test results file(s)
-          reporter: java-junit # Specify the format of your test results
-          fail-on-error: true # Set to true if you want the GH job to fail on test failures
-
-      - name: Upload test results as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-report
-          path: test-results.xml
+    - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Run tests and generate JUnit XML report
+      # Generate a JUnit XML report file named test-results.xml
+      run: |
+        pytest --junitxml=test-results.xml
+    - name: Generate Excel report
+      # Run the Python script to convert XML to Excel
+      run: |
+        python generate_excel_report.py test-results.xml test-status-report.xlsx
+    - name: Upload Excel report artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-status-report
+        path: test-status-report.xlsx
