--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -1,6 +1,10 @@
 name: Python application CI
 
-on: [push]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -11,24 +15,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
-
+        python-version: '3.x'
     - name: Install dependencies
       run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install pytest pandas openpyxl
-
-    - name: Run tests and generate JUnit XML report
-      # Generate a JUnit XML report file named test-results.xml
+        python -m pip install --upgrade pip
+        pip install pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Run tests with pytest
       run: |
-        pytest --junitxml=test-results.xml
-    - name: Generate Excel report
-      # Run the Python script to convert XML to Excel
-      run: |
-        python generate_excel_report.py test-results.xml test-status-report.xlsx
-    - name: Upload Excel report artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: test-status-report
-        path: test-status-report.xlsx
+        pytest
