--- a/.github/workflows/daily_run.yaml
+++ b/.github/workflows/daily_run.yaml
@@ -1,36 +1,20 @@
-name: Daily House Report Script Execution
-
+name: 'Test Report daily'
 on:
-  # push:
-  #   branches:
-  #     - main
-  schedule:
-    - cron: '0 0 * * *'
-
+  workflow_run:
+    workflows: ['CI']                     # runs after CI workflow
+    types:
+      - completed
+permissions:
+  contents: read
+  actions: read
+  checks: write
 jobs:
-  run-scripts:
+  report:
     runs-on: ubuntu-latest
-
-    env:
-        sheet_name: ${{ secrets.sheet_name }}
-        sheet_id: ${{ secrets.sheet_id }}
-        app_password: ${{ secrets.app_password }}
-        sender_email: ${{ secrets.sender_email }}
-        recipient_mail: ${{ secrets.recipient_mail }}
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - uses: dorny/test-reporter@v2
       with:
-        python-version: '3.10'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-    - name: Run Report Script
-      run: python generate_report.py
+        artifact: test-results            # artifact name
+        name: JEST Tests                  # Name of the check run which will be created
+        path: '*.xml'                     # Path to test results (inside artifact .zip)
+        reporter: jest-junit              # Format of test results
